<!--
  ~ Copyright (C) 2017 Oleg Kan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">JobSchedulers example</string>
    <string name="action_add">Add</string>
    <string name="schedule_job_button_text">Schedule Job</string>
    <string name="cancel_all_jobs_button_text">Cancel all</string>
    <string name="finish_job_button_text">Finish last task</string>
    <string name="idle_mode_text">Requires device in idle mode.</string>
    <string name="charging_caption">Charging:</string>
    <string name="charging_text">Requires device plugged in.</string>
    <string name="idle_caption">Idle:</string>
    <string name="connectivity">Connectivity:</string>
    <string name="any">Any</string>
    <string name="unmetered">WiFi</string>
    <string name="timing">Timing:</string>
    <string name="delay">Delay:</string>
    <string name="deadline">Deadline:</string>
    <string name="work_duration">Work duration:</string>
    <string name="cancelled_job">Cancelled job %d</string>
    <string name="no_jobs_to_cancel">No jobs to cancel</string>
    <string name="all_jobs_cancelled">All jobs cancelled</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="firebase_job_dispatcher">Firebase Job Dispatcher</string>
    <string name="library">Library</string>
    <string name="activity_add_job">Add Job</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="persisted_caption">Persisted</string>
    <string name="persisted_text">Persist this job across device reboots</string>
    <string name="periodic">Periodic</string>
    <string name="one_time">One-time</string>
    <string name="periodicity">Periodicity</string>
    <string name="schedule">Schedule</string>
    <string name="interval">Interval</string>
    <string name="action_cancel_all_jobs">Cancel all jobs</string>
</resources>
