<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Oleg Kan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simplaapliko.test.jobscheduler.AddJobActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/library"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/checkbox_job_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/job_scheduler" />

                        <RadioButton
                            android:id="@+id/checkbox_firebase_jobdispatcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/firebase_job_dispatcher" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/connectivity"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/checkbox_any"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/any" />

                        <RadioButton
                            android:id="@+id/checkbox_unmetered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unmetered" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/periodicity"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/checkbox_periodic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/periodic" />

                        <RadioButton
                            android:id="@+id/checkbox_one_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one_time" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/schedule"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interval" />

                        <EditText
                            android:id="@+id/interval_time"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="0" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/delay"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timing" />

                        <EditText
                            android:id="@+id/delay_time"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deadline"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/deadline_time"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="15" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/charging_caption"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_charging"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/charging_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/idle_caption" />

                    <CheckBox
                        android:id="@+id/checkbox_idle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idle_mode_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/persisted_caption" />

                    <CheckBox
                        android:id="@+id/checkbox_persisted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persisted_text" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/schedule_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/schedule_job_button_text" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
